--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
 		"cookie-parser": "^1.4.6",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
-		"joi": "^17.4.2",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.0.13"
+		"mongoose": "^6.0.13",
+		"winston": "^3.3.3"
 	},
 	"devDependencies": {
 		"morgan": "^1.10.0",
