--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "app.js",
 	"scripts": {
-		"start": "nodemon --inspect app.js",
+		"start": "nodemon -e * --inspect app.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
@@ -17,7 +17,9 @@
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.0.13",
-		"winston": "^3.3.3"
+		"swagger-ui-express": "^4.1.6",
+		"winston": "^3.3.3",
+		"yamljs": "^0.3.0"
 	},
 	"devDependencies": {
 		"morgan": "^1.10.0",
